demo-microservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 127.0.0.1.nip.io
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /core
        pathType: Prefix
        backend:
          service:
            name: core-service
            port:
              number: 80
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
